Fix top level spacing in uiMockups.html

--- a/assets/css/modules/_deliverables.scss
+++ b/assets/css/modules/_deliverables.scss
@@ -91,6 +91,10 @@ Deliverables Section Styles
   top: -80px;
 }
 
+#ui-mockups-anchor {
+  top: -80px;
+}
+
 #sitemap-toplevel-anchor {
   top: -80px;
 }
